--- a/styles.css
+++ b/styles.css
@@ -31,14 +31,14 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 20px 40px; /* Increased padding for breathing room */
+  padding: 10px 20px; /* Increased padding for breathing room */
   background-color: #000000;
   color: #FBFAF5;
-  z-index: 100;
+  z-index: 50;
 }
 
 .navbar h1 {
-  font-size: 1.8rem; /* Large enough for readability */
+  font-size: 1.5rem; /* Large enough for readability */
   font-family: 'Playfair Display', serif;
 }
 
@@ -89,13 +89,13 @@ body {
 }
 
 .about-content h3 {
-  font-size: 2rem;
-  font-family: 'BadaBoom BB', sans-serif;
+  font-size: 2.3rem;
+  font-family: 'Bubble Mint', sans-serif;
   margin-bottom: 20px;
 }
 
 .about-content p {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   margin-bottom: 15px;
 }
 
